# cg-shop-2023

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  requirements.txt
include/: MPE_fastpoly2tri.h
results/: overview.tmpl.html
scripts/: common.py  create_submission.py  duplicate.py  run.py  view.py
src/: v01.cpp  v02.cpp  v03.cpp  v04.cpp  v05.cpp
